Fix list prefix alignment
In the process, eneralised the inline element decorator to take in any
valid child accepted by the `h` function.

Also removes the React warning about passing keys to mapped elements.

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,8 @@
 .section .token-newline {
   font-size: 0;
 }
+
+.section .token-invisible {
+  visibility: hidden;
+  font-size: 0;
+}
